# Rosalind

./: .gitignore  CMakeLists.txt  conanfile.txt  create_sub.sh
.template/: Makefile  main.cpp
apps/: CMakeLists.txt
apps/calc_protein_mass/: CMakeLists.txt  main.cpp  monoisotopic_mass.h
apps/consensus_and_profile/: CMakeLists.txt  main.cpp
apps/consensus_and_profile/src/: consensus_and_profile.main.cpp
apps/counting_nucleotides/: CMakeLists.txt
apps/counting_nucleotides/data/: rosalind_dna.txt
apps/counting_point_mutations/: CMakeLists.txt  main.cpp
apps/counting_point_mutations/data/: rosalind_hamm.txt
apps/dna/: CMakeLists.txt  counting_nucleotides.cpp
apps/fib/: fibonacci_rabbits.cpp
apps/fibonacci_rabbits/: CMakeLists.txt
apps/fibonacci_rabbits/src/: fibonacci_rabbits.main.cpp
apps/identifying_genomes/: CMakeLists.txt  main.cpp
apps/identifying_genomes/data/: rosalind_gc.fasta
apps/infer_mRNA/: CMakeLists.txt  main.cpp
apps/motif_in_dna/: CMakeLists.txt  main.cpp
apps/motif_in_dna/src/: motif_in_dna.main.cpp
apps/overlap_graphs/: CMakeLists.txt  overlap_graphs.cpp
apps/overlap_graphs/src/: overlap_graphs.main.cpp
apps/protein_translation/: CMakeLists.txt  main.cpp
apps/protein_translation/src/: protein_translation.main.cpp
apps/reverse_complement/: CMakeLists.txt  main.cpp
apps/reverse_complement/src/: reverse_complement.main.cpp
apps/rna/: CMakeLists.txt  rna_transcription.cpp
apps/rna_transcription/: CMakeLists.txt
calc_protein_mass/: main.cpp
consensus_and_profile/: Makefile  main.cpp
counting_nucleotides/: Makefile  main.cpp
counting_point_mutations/: Makefile  main.cpp
executables/: CMakeLists.txt  create_sub.sh
executables/calc_protein_mass/: CMakeLists.txt  monoisotopic_mass.h  monoisotopic_mass.hpp  output.txt  rosalind_prtm.txt
executables/consensus_and_profile/: CMakeLists.txt  rosalind_cons.txt
executables/counting_nucleotides/: CMakeLists.txt  main.cpp
executables/counting_point_mutations/: CMakeLists.txt
executables/identifying_genomes/: CMakeLists.txt  Makefile  main.cpp
executables/infer_mRNA/: CMakeLists.txt  Makefile  main.cpp
executables/motif_in_dna/: CMakeLists.txt  Makefile  main.cpp
executables/overlap_graphs/: CMakeLists.txt  main.cpp  overlap_graphs  overlap_graphs.cpp
executables/protein_translation/: CMakeLists.txt  Makefile  main.cpp
executables/reverse_complement/: CMakeLists.txt  Makefile  main.cpp  rosalind_revc.txt
executables/rna_transcription/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt
include/common/: CMakeLists.txt  args.cpp  args.h
include/fastx_utils/: CMakeLists.txt  fastx_reader.h  read.cpp  read.h
include/fastx_utils/fasta/: CMakeLists.txt  fasta_read.cpp  fasta_read.h
include/unittest++/: CMakeLists.txt
infer_mRNA/: rosalind_mrna.txt
lib/: CMakeLists.txt  fasta_reader.h  fasta_reader.hpp  fastx_reader.h  read.h  read.hpp
lib/fastx_utils/: CMakeLists.txt  fasta_read.hpp
lib/fastx_utils/fasta/: CMakeLists.txt  fasta_read.cpp  fasta_read.h  fasta_reader.cpp  fasta_reader.h
libs/: CMakeLists.txt
libs/fastx/: CMakeLists.txt
libs/fastx/src/: fasta_read.cpp  fasta_read.h  fasta_read.hpp  fasta_reader.cpp  fasta_reader.h  fasta_reader.hpp  fastx_reader.hpp  read.cpp  read.h
libs/fastx/src/fastx/: fasta_read.cpp  fasta_read.hpp  fasta_reader.cpp  fasta_reader.hpp  fastx_reader.hpp  read.cpp  read.hpp
motif_in_dna/: main.cpp  rosalind_subs.txt
protein_translation/: main.cpp  rosalind_prot.txt
reverse_complement/: main.cpp  sample.txt
rna_transcription/: Makefile  rosalind_rna.txt  sample.txt
src/: CMakeLists.txt
test/: CMakeLists.txt  ReadTest.cpp  main.cpp
(+8 files in other folders)
