CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(rosalind CXX)

INCLUDE_DIRECTORIES(include)
LINK_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR}/lib)
ADD_DEFINITIONS(-g -fsigned-char -Wall -W -Wshadow -Wpointer-arith -Wcast-qual -Winline -Werror)

ADD_SUBDIRECTORY(include)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(executables)
