CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_SUBDIRECTORY(counting_point_mutations)
ADD_SUBDIRECTORY(consensus_and_profile)
ADD_SUBDIRECTORY(calc_protein_mass)
ADD_SUBDIRECTORY(identifying_genomes)
ADD_SUBDIRECTORY(infer_mRNA)
ADD_SUBDIRECTORY(motif_in_dna)
ADD_SUBDIRECTORY(protein_translation)
ADD_SUBDIRECTORY(reverse_complement)
ADD_SUBDIRECTORY(overlap_graphs)

